# stylus-rust-demo

./: Cargo.toml  README.md
.github/workflows/: test.yml
contracts/1-counter-contract/: Cargo.toml
contracts/1-counter-contract/src/: main.rs
contracts/2-vending-machine/: Cargo.toml
contracts/2-vending-machine/src/: lib.rs  main.rs
contracts/3-onchain-data-validator/: Cargo.toml
contracts/3-onchain-data-validator/src/: lib.rs  main.rs
