[workspace]
members = [
    "contracts/1-counter-contract",
    "contracts/2-vending-machine",
    "contracts/3-onchain-data-validator",
]
resolver = "2"

[workspace.dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false, features = ["std", "tiny-keccak"] }
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s" # Optimized for size is better for contracts

