[package]
name = "onchain-data-validator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives.workspace = true
stylus-sdk.workspace = true

# use an ecosystem crate for on-chain logic!
rust_decimal = { version = "1.35.0", default-features = false }

[dev-dependencies]
stylus-sdk = { workspace = true, features = ["stylus-test"] }

[features]
default = ["stylus-sdk/mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[bin]]
name = "onchain-data-validator"
path = "src/main.rs"